Fixed view icon alignment

--- a/docroot/profiles/unicef/themes/custom/vss/theme-resources/scss/molecules/_view-block.scss
+++ b/docroot/profiles/unicef/themes/custom/vss/theme-resources/scss/molecules/_view-block.scss
@@ -4,7 +4,11 @@
     display: flex;
 
     .view-icon {
-      margin-right: 8px;
+      margin-right: 6px;
+
+      img {
+        vertical-align: text-top;
+      }
     }
   }
 }
